fix navbar collapse, clean up code and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,23 +12,12 @@ body {
 
 /* general */
 
-/*.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  clear: both;
-}*/
-
 h1,
 h2,
 h3,
 p {
   margin-bottom: 20px;
 }
-
-/*p:last-child {
-  margin-bottom: 0;
-}*/
 
 h1,
 h2,
@@ -53,19 +42,12 @@ h3 {
 /* header */
 
 #masthead {
-/*  position: fixed;*/
-/*  z-index: 99;*/
-/*  width: 100%;*/
-/*  margin: 0 0 30px;*/
-/*  overflow: auto;*/
   color: #fff;
   background: #fff;
   border-bottom: 2px solid #ccc;
 }
 
 .navbar-brand {
-/*  float: left;*/
-/*  width: 300px;*/
   height: 90px;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
@@ -76,6 +58,11 @@ h3 {
   text-decoration: none;
   background: #4aaaa5;
   margin-top: -1px;
+}
+
+.navbar-default .navbar-brand {
+  color: #fff;
+  background: #4aaaa5;
 }
 
 #navbar-links a {
@@ -90,21 +77,6 @@ h3 {
 #no-border-about {
   border-left: 0 none !important;
 }
-
-/*nav a {*/
-/*  display: inline-block;*/
-/*  padding-left: 15px;
-  margin-left: 15px;*/
-/*  line-height: 60px !important;
-  color: #999;
-  text-decoration: none;
-  border-left: 1px solid #efefef !important;
-}
-*/
-/*nav a:first-child {
-  border-left: 0 none;
-}*/
-
 
 /* footer */
 
@@ -122,13 +94,7 @@ h3 {
 /* sidebar */
 
 .sidebar {
-/*  float: right;*/
-/*  width: 100%;*/
-/*  max-width: 270px;*/
   padding: 0px 30px 30px 30px;
-/*  margin-bottom: 20px;*/
-/*  padding-bottom: 30px;*/
-/*  margin-left: 30px;*/
   background: #fff;
   border: 1px solid #ddd;
   margin-bottom: 30px;
@@ -143,35 +109,17 @@ h3,
 }
 
 .social {
-/*  max-width: 15%;*/
   max-height: 60px;
   margin-bottom: 5px;
-
-/*  width: 62px;
-  height: 62px;
-  margin-top: 8px;
-  margin-right: 5px;*/
-
 }
 
 .social.img-responsive {
   display: inline-block;
 }
 
-/*.social:last-child {
-  margin-right: 0;
-}*/
-
 /* main */
 
-/*#main-container {
-  padding-top: 130px;
-}*/
-
 .main-section {
-/*  float: left;*/
-/*  width: 100%;
-  max-width: 650px;*/
   padding: 0px 30px 30px 30px;
   margin: 0px 0px 30px;
   background: #fff;
@@ -191,9 +139,7 @@ h3,
 }
 
 #profile-photo {
-/*  float: left;*/
   max-width: 25%;
-/*  height: auto%;*/
   margin-bottom: 15px;
   margin-right: 15px;
   margin-left: 15px;
@@ -202,30 +148,6 @@ h3,
 
 
 /* portfolio page */
-
-/*.work {
-position: relative;
-  float: left;
-  width: 274px;
-  margin: 20px 0 25px;
-  overflow: auto;
-}*/
-
-/*.work {
-  border: 1px solid blue;
-  max-height: 150px;
-}*/
-
-/*.work:nth-child(even) {
-  margin-right: 40px;
-}*/
-
-/*.work img {
-  max-width: 100px;
-  border: 0 none;
-  opacity: 0.8;
-  z-index: 1;
-}*/
 
 /* override bootstrap defaults for portfolio page */
 .caption {
@@ -240,7 +162,7 @@ position: relative;
   box-shadow: none;
   margin: 15px;
   padding: 0;
-  max-width:220px;  /* computed max-width of img-responsive */
+  max-width: 220px;  /* computed max-width of img-responsive */
 }
 
 .caption h3 {
@@ -250,29 +172,6 @@ position: relative;
   margin-bottom: 0;
   margin-top: 0;
 }
-
-/*.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-/*  margin-bottom: -20px;*/
-/*  font-weight: 300;*/
-/*  line-height: 30px;*/
-/*  color: #fff;*/
-/*  text-align: center;*/
-/*  background: #4aaaa5;
-  border-bottom: 0;*/
-/*  z-index: 2;*/
-/*}*/
-
-/*.auth-image {
-  float: left;
-  width: 200px;
-  height: auto;
-  margin-top: 10px;
-  margin-right: 25px;
-}*/
 
 /* contact page */
 
@@ -306,13 +205,6 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
-
-/*input[placeholder] {
-  font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
-  font-size: 12px;
-  color: #dddddd;
-  vertical-align: middle;
-}*/
 
 #submit-button {
   background-color: #4aaaa5;
